--- a/src/index.css
+++ b/src/index.css
@@ -64,7 +64,7 @@ html{
 }
 
 body{
-  background-color: white/*#2a2a2a*/;
+  background-color: #2a2a2a;
   font-family: 'Montserrat', sans-serif;
   /*overflow-y: hidden;*/
   overflow-x: hidden;
